// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Attribution's send destination action: all fields 1`] = `
Object {
  "anonymousId": "H96AZsD0",
  "context": Object {
    "testType": "H96AZsD0",
  },
  "messageId": "H96AZsD0",
  "name": "H96AZsD0",
  "properties": Object {
    "testType": "H96AZsD0",
  },
  "timestamp": "H96AZsD0",
  "traits": Object {
    "testType": "H96AZsD0",
  },
  "type": "page",
  "userId": "H96AZsD0",
}
`;

exports[`Testing snapshot for Attribution's send destination action: required fields 1`] = `
Object {
  "messageId": "H96AZsD0",
  "timestamp": "H96AZsD0",
  "type": "page",
  "userId": "H96AZsD0",
}
`;
